# zhouzhou-voice

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  start.bat
app/: __init__.py  app.py  lifecycle.py
core/: __init__.py  asr_engine.py  asr_process.py  audio_recorder.py  model_catalog.py  model_downloader.py  recording_db.py  text_processor.py
docs/: ARCHITECTURE.md
gui/: __init__.py  main_window.py  mic_test_dialog.py  recording_indicator.py  settings_panel.py  tray_icon.py  update_dialog.py
gui/widgets/: __init__.py  asr_tab.py  audio_player.py  history_tab.py  hotword_tab.py  llm_benchmark_dialog.py  provider_combo.py  role_tab.py  shortcut_input.py  (+1 more)
hotword/: __init__.py  manager.py  phoneme.py  rectify.py  rules.py
llm/: __init__.py  benchmark.py  builtin_key.py  client.py  model_cache.py  model_fetcher.py  processor.py  provider.py
tests/: test_adversarial_fixes.py  test_apply_config_rollback.py  test_asr_recreate_rollback.py  test_codex_bugs.py  test_codex_iter2_bugs.py  test_config_atomic_save.py  test_discovery2_fixes.py  test_discovery3_fixes.py  test_discovery_fixes.py  test_donation.py  test_ffmpeg_resolver.py  test_fixes.py  test_handover_fixes.py  test_iter2_medium_bugs.py  test_iter3_bugs.py  test_iter3_remaining_bugs.py  test_llm_benchmark.py  test_llm_latency.py  test_model_fetcher.py  test_provider_visibility.py  test_review_fixes.py  test_startup_command.py  test_tdd_loop_iter1.py  test_tdd_loop_iter2.py  test_tdd_loop_iter3.py  test_text_processor.py  test_updater_security.py
tools/: asr_benchmark.py
transcribe/: __init__.py  file_transcriber.py  srt_writer.py
utils/: __init__.py  clipboard.py  config.py  hotkey.py  keyboard.py  logger.py  paths.py  startup.py  updater.py
(+10 files in other folders)
