[project]
name = "zhouzhou-voice"
version = "3.7"
description = "Windows 離線語音輸入工具（sherpa-onnx ASR + 可選 LLM 潤色）"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Natural Language :: Chinese (Traditional)",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: 單元測試（純函數、無外部依賴）",
    "integration: 整合測試（檔案 I/O、子進程）",
    "slow: 耗時測試（ASR/LLM 實際呼叫）",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.coverage.run]
source = ["app", "core", "utils", "hotword", "llm", "transcribe", "gui"]
omit = [
    "tests/*",
    "build/*",
    "dist/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line-length 由 formatter 處理
